--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kitbot",
   "version": "1.0.0",
   "description": "A cool bot for Kitsun :3 (Made with Nextcord!!!)",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.4",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
